--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -37,3 +37,21 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+.float {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 100px;
+  left: 40px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
+}
