--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -55,3 +55,145 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.title-jenis-kanker {
+  margin-top: 35%;
+}
+
+.desc-jenis-kanker {
+  margin-top: 40%;
+}
+
+.desc-seputar-kanker {
+  width: 30%;
+}
+.desc-mencegah {
+  margin-left: 10%;
+  margin-top: 10%;
+  width: 30%;
+}
+.desc-mencegah2 {
+  margin-left: 5%;
+  margin-top: 35%;
+  width: 30%;
+}
+.desc-mencegah3 {
+  margin-left: 15%;
+  margin-top: 60%;
+  width: 30%;
+}
+.desc-mencegah4 {
+  margin-left: 70%;
+  margin-top: 15%;
+  width: 25%;
+}
+.desc-mencegah5 {
+  margin-left: 60%;
+  margin-top: 55%;
+  width: 25%;
+}
+.desc-mencegah6 {
+  margin-left: 50%;
+  margin-top: 35%;
+  width: 25%;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .title-jenis-kanker {
+    margin-top: 35%;
+  }
+  .desc-jenis-kanker {
+    margin-top: 45%;
+  }
+  .desc-seputar-kanker {
+    width: 20%;
+  }
+  .desc-mencegah {
+    margin-left: 10%;
+    margin-top: 15%;
+    width: 30%;
+  }
+  .desc-mencegah2 {
+    margin-left: 5%;
+    margin-top: 45%;
+    width: 30%;
+  }
+  .desc-mencegah3 {
+    margin-left: 15%;
+    margin-top: 70%;
+    width: 30%;
+  }
+  .desc-mencegah4 {
+    margin-left: 70%;
+    margin-top: 20%;
+    width: 25%;
+  }
+  .desc-mencegah5 {
+    margin-left: 60%;
+    margin-top: 60%;
+    width: 25%;
+  }
+  .desc-mencegah6 {
+    margin-left: 50%;
+    margin-top: 40%;
+    width: 25%;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .title-jenis-kanker {
+    margin-top: 17%;
+  }
+  .desc-jenis-kanker {
+    margin-top: 25%;
+  }
+
+  .desc-seputar-kanker {
+    width: 20%;
+  }
+
+  .desc-mencegah {
+    margin-left: 10%;
+    margin-top: 10%;
+    width: 30%;
+  }
+  .desc-mencegah2 {
+    margin-left: 5%;
+    margin-top: 35%;
+    width: 30%;
+  }
+  .desc-mencegah3 {
+    margin-left: 15%;
+    margin-top: 47%;
+    width: 30%;
+  }
+  .desc-mencegah4 {
+    margin-left: 70%;
+    margin-top: 15%;
+    width: 25%;
+  }
+  .desc-mencegah5 {
+    margin-left: 60%;
+    margin-top: 43%;
+    width: 25%;
+  }
+  .desc-mencegah6 {
+    margin-left: 50%;
+    margin-top: 30%;
+    width: 25%;
+  }
+}
