--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Josefin Sans", cursive;
+  /* font-family: "Patrick Hand", cursive; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@font-face {
+  font-family: "Patrick Hand";
+  src: local("PatrickHand"),
+    url(./assets/fonts/Patrick_Hand/PatrickHand-Regular.ttf) format("truetype");
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
+
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
