--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -106,7 +106,6 @@
 
   .fade {
     transition: 1s;
-    background-color: rgba(255, 255, 255, 0.3);
     padding: 10px;
     position: fixed;
   }
@@ -128,7 +127,32 @@
     background-color: rgba(255, 255, 255, 0.3);
     padding: 5px;
     position: fixed;
-    width: 900px;
+    width: 1000px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .myth {
+    transition: 1s;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    z-index: -5;
+  }
+
+  .down-myth {
+    opacity: 1;
+    bottom: 0;
+    z-index: 5;
+  }
+
+  .tingkatan {
+    transition: 1s;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 5px;
+    position: fixed;
+    width: 1000px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -416,6 +440,10 @@
     font-size: 0.8em;
     transition: all 0.3s ease-in-out;
   }
+
+  .tingkatan-height {
+    height: 600px;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -512,7 +540,6 @@
 
   .fade {
     transition: 1s;
-    background-color: rgba(255, 255, 255, 0.3);
     padding: 10px;
     position: fixed;
   }
@@ -530,14 +557,37 @@
     transform: translate(-50%, 100%);
   }
 
+  .myth {
+    transition: 1s;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+  }
+
+  .down-myth {
+    opacity: 1;
+    z-index: 5;
+  }
+
   .gejala {
     /* transition: 1s; */
     /* background-color: rgba(255, 255, 255, 0.3); */
     /* padding: 10px; */
-    width: 900px;
+    width: 1000px;
     /* justify-content: center; */
     /* align-items: center; */
     /* text-align: center; */
+  }
+
+  .tingkatan {
+    transition: 1s;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 5px;
+    position: fixed;
+    width: 1400px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .left {
@@ -820,5 +870,9 @@
 
   .line-height {
     line-height: 200%;
+  }
+
+  .tingkatan-height {
+    height: 700px;
   }
 }
