--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merienda+One&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
+/* @font-face {
+  font-family: "MeriendaOne";
+  src: local("MeriendaOne"),
+    url(./assets/fonts/MeriendaOne-Regular.ttf) format("ttf");
+} */
+/* @import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Merienda+One&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css?family=Josefin+Sans"); */
 p {
   font-size: 18px;
 }
