--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ p {
   font-family: MeriendaOne;
 }
 
+div {
+  font-family: MeriendaOne;
+}
+
 @media only screen and (max-width: 600px) {
   p {
     font-size: 14px;
