--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,25 @@
 @font-face {
-  font-family: "MeriendaOne";
-  src: local("MeriendaOne"),
-    url(./fonts/MeriendaOne-Regular.ttf) format("truetype");
+  font-family: "Inter";
+  src: local("Inter"), url(./fonts/Inter.ttf) format("truetype");
 }
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* font-family: "Josefin Sans", cursive; */
-  /* font-family: "Patrick Hand", serif; */
-  /* font-family: MeriendaOne; */
 }
 
 code {
-  /* font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace; */
 }
 
 p {
   font-size: 18px;
-  font-family: MeriendaOne;
+  /* font-family: Inter; */
 }
 
 div {
-  font-family: MeriendaOne;
+  font-family: Inter;
 }
 
 @media only screen and (max-width: 600px) {
