--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,3 @@
-body {
-  /* font-family: MeriendaOne; */
-}
-
 .icon {
   cursor: pointer;
   transition: 1s;
@@ -32,12 +28,24 @@ body {
   transform: translate(-50%, 0%);
 }
 
+.text-peka {
+  position: fixed;
+  left: -100%;
+  bottom: -100%;
+  opacity: 0;
+}
+
 .apa-itu-peka {
   padding: 10px 0px;
   color: #ff1493;
   width: 700px;
   margin-bottom: 20px;
   font-size: 16px;
+}
+
+.disable-hover:hover {
+  transform: translateY(0);
+  box-shadow: 0.1px 1px 0px 0px rgba(0, 0, 0, 0.3);
 }
 
 .apa-itu-kanker {
@@ -48,7 +56,7 @@ body {
 }
 
 .pencegahan-title {
-  width: 900px;
+  width: 850px;
 }
 
 .tipe-title {
@@ -84,7 +92,7 @@ body {
 }
 
 .mitos-title {
-  width: 620px;
+  width: 510px;
 }
 
 .mitos-padding {
@@ -92,15 +100,35 @@ body {
 }
 
 .faq-title {
-  width: 500px;
+  width: 470px;
 }
 
 .faqs-padding {
   padding: 50px;
 }
 
+.faqs-center {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: 1s;
+  z-index: -12;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  .faqs-center {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: 1s;
+    z-index: -12;
+  }
+
   .faqs-padding {
     padding: 20px;
   }
@@ -140,7 +168,7 @@ body {
   }
 
   .pencegahan-title {
-    width: 350px;
+    width: 390px;
   }
 
   .font-title {
@@ -168,9 +196,21 @@ body {
 
   .icon-wanita {
     position: fixed;
-    bottom: -1%;
     left: 50%;
-    bottom: 20%;
+    bottom: 60%;
+  }
+
+  .text-peka {
+    position: fixed;
+    opacity: 1;
+    width: 200px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    left: 50%;
+    bottom: 81%;
+    margin-left: -100px;
+    color: #ff1493;
   }
 
   .icon {
@@ -186,7 +226,7 @@ body {
 
   .icon0 {
     left: 50%;
-    bottom: 0%;
+    bottom: 2%;
     z-index: 1;
     margin-left: -150px;
     width: 300px;
@@ -239,15 +279,17 @@ body {
   }
 
   .icon-move {
-    left: 45%;
-    bottom: 0%;
+    left: 50%;
+    bottom: 2%;
     z-index: 99;
+    margin-left: -50px;
   }
 
   .icon-move-right {
-    right: 45%;
+    right: 50%;
     bottom: 0%;
     z-index: 99;
+    margin-right: -50px;
   }
 
   .fade {
@@ -275,7 +317,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     padding: 5px;
     position: fixed;
-    width: 400px;
+    width: 370px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -313,7 +355,7 @@ body {
   }
 
   .right {
-    transform: translate(-50%, 200%);
+    transform: translate(-50%, 150%);
   }
 
   .from-right {
@@ -323,7 +365,7 @@ body {
   }
 
   .to-left {
-    transform: translate(50%, 300%);
+    transform: translate(50%, 250%);
   }
 
   .left2 {
@@ -333,7 +375,7 @@ body {
   }
 
   .right2 {
-    transform: translate(-50%, 400%);
+    transform: translate(-50%, 350%);
   }
 
   .left2-cegah {
@@ -343,7 +385,7 @@ body {
 
   .right2-cegah {
     z-index: 10;
-    transform: translate(-50%, 700%);
+    transform: translate(-50%, 650%);
   }
 
   .from-right2 {
@@ -353,7 +395,7 @@ body {
   }
 
   .to-left2 {
-    transform: translate(50%, 500%);
+    transform: translate(50%, 450%);
   }
 
   .left3 {
@@ -363,7 +405,7 @@ body {
   }
 
   .right3 {
-    transform: translate(-50%, 600%);
+    transform: translate(-50%, 550%);
   }
 
   .from-right3 {
@@ -373,7 +415,7 @@ body {
   }
 
   .to-left3 {
-    transform: translate(50%, 700%);
+    transform: translate(50%, 650%);
   }
 
   .awan1 {
@@ -547,6 +589,8 @@ body {
   }
 
   .fade-center-aktif-faqs {
+    position: fixed;
+    left: 50%;
     top: 40%;
     opacity: 1;
     z-index: 20;
@@ -584,20 +628,21 @@ body {
   }
 
   button {
-    background: #ff1493;
+    background: #fff;
     outline: none;
     position: relative;
     border: 3px solid #111;
     padding: 15px 50px;
     overflow: hidden;
-    color: #fff;
+    color: #ff1493;
+    border-radius: 10px;
   }
 
   /*button:before (attr data-hover)*/
   button:hover:before {
     opacity: 1;
     transform: translate(0, 0);
-    padding: 15px;
+    padding: 20px;
   }
   button:before {
     content: attr(data-hover);
@@ -627,7 +672,11 @@ body {
   }
 
   .tingkatan-height {
-    height: 600px;
+    height: 500px;
+  }
+
+  .diagnosa-height {
+    height: 500px;
   }
 
   .bottom-right-hide {
@@ -685,23 +734,15 @@ body {
   }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 600px) {
   .line-height {
     line-height: 150%;
   }
 
   .icon0 {
     left: 50%;
-    bottom: 20%;
+    bottom: 10%;
     z-index: 1;
     margin-left: -250px;
   }
@@ -753,15 +794,17 @@ body {
   }
 
   .icon-move {
-    left: 45%;
+    left: 50%;
     bottom: 0%;
     z-index: 99;
+    margin-left: -100px;
   }
 
   .icon-move-right {
-    right: 45%;
+    right: 50%;
     bottom: 0%;
     z-index: 99;
+    margin-right: -100px;
   }
 
   .fade {
@@ -776,6 +819,7 @@ body {
   }
 
   .down {
+    z-index: 99;
     transform: translate(-50%, 1%);
   }
   .down-down {
@@ -787,7 +831,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     padding: 5px;
     position: fixed;
-    width: 1000px;
+    width: 600px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -824,6 +868,7 @@ body {
   }
 
   .right {
+    z-index: 99;
     transform: translate(-50%, 200%);
   }
 
@@ -833,37 +878,45 @@ body {
   }
 
   .to-left {
+    z-index: 99;
     transform: translate(50%, 300%);
   }
 
   .left2 {
     left: 50%;
+    z-index: 99;
     transform: translate(-250%, 400%);
   }
 
   .right2 {
+    z-index: 99;
     transform: translate(-50%, 400%);
   }
 
   .from-right2 {
+    z-index: 99;
     right: 50%;
     transform: translate(250%, 500%);
   }
 
   .to-left2 {
+    z-index: 99;
     transform: translate(50%, 500%);
   }
 
   .left3 {
+    z-index: 99;
     left: 50%;
     transform: translate(-250%, 600%);
   }
 
   .right3 {
+    z-index: 99;
     transform: translate(-50%, 600%);
   }
 
   .from-right3 {
+    z-index: 99;
     right: 50%;
     transform: translate(250%, 700%);
   }
@@ -1060,19 +1113,21 @@ body {
     cursor: pointer;
   }
   button {
-    background: #ff1493;
+    background: #fff;
     outline: none;
     position: relative;
     border: 3px solid #111;
     padding: 15px 50px;
     overflow: hidden;
-    color: #fff;
+    color: #ff1493;
+    border-radius: 10px;
   }
 
   /*button:before (attr data-hover)*/
   button:hover:before {
     opacity: 1;
     transform: translate(0, 0);
+    padding: 10px;
   }
   button:before {
     content: attr(data-hover);
@@ -1103,6 +1158,10 @@ body {
 
   .tingkatan-height {
     height: 600px;
+  }
+
+  .diagnosa-height {
+    height: inherit;
   }
 
   .bottom-right-hide {
@@ -1149,7 +1208,7 @@ body {
 @media only screen and (min-width: 1200px) {
   .icon0 {
     left: 50%;
-    bottom: 20%;
+    bottom: 10%;
     z-index: 1;
     margin-left: -250px;
   }
@@ -1220,9 +1279,10 @@ body {
   }
 
   .icon-move {
-    left: 45%;
+    left: 50%;
     bottom: 0%;
     z-index: 99;
+    margin-left: -100px;
   }
 
   .icon-move-gejala {
@@ -1232,9 +1292,10 @@ body {
   }
 
   .icon-move-right {
-    right: 45%;
     bottom: 0%;
     z-index: 99;
+    right: 50%;
+    margin-right: -100px;
   }
 
   .fade {
@@ -1296,7 +1357,7 @@ body {
     /* transition: 1s; */
     /* background-color: rgba(255, 255, 255, 0.3); */
     /* padding: 10px; */
-    width: 1000px;
+    width: 600px;
     /* justify-content: center; */
     /* align-items: center; */
     /* text-align: center; */
@@ -1543,6 +1604,7 @@ body {
 
   .wanita-fade {
     opacity: 0;
+    z-index: -99;
   }
   .fade-center-aktif-faqs {
     top: 40%;
@@ -1553,19 +1615,21 @@ body {
     cursor: pointer;
   }
   button {
-    background: #ff1493;
+    background: #fff;
     outline: none;
     position: relative;
     border: 3px solid #111;
     padding: 15px 50px;
     overflow: hidden;
-    color: #fff;
+    color: #ff1493;
+    border-radius: 10px;
   }
 
   /*button:before (attr data-hover)*/
   button:hover:before {
     opacity: 1;
     transform: translate(0, 0);
+    padding: 10px;
   }
   button:before {
     content: attr(data-hover);
@@ -1600,5 +1664,9 @@ body {
 
   .tingkatan-height {
     height: 600px;
+  }
+
+  .diagnosa-height {
+    height: inherit;
   }
 }
